@@ -1,16 +1,16 @@
 import(grDevices)
 
 export(abline, arrows, assocplot, axTicks, Axis, axis, axis.Date,
-       axis.POSIXct, barplot, barplot, box, boxplot, bxp, "cdplot",
-       close.screen, co.intervals, contour, coplot, curve, dotchart,
-       erase.screen, filled.contour, fourfoldplot, frame, grid, hist,
-       hist.default, identify, image, layout, layout.show, lcm, legend,
-       lines, lines.default, locator, matlines, matplot, matpoints,
-       mosaicplot, mtext, pairs, panel.smooth, par, persp, pie, plot,
-       plot.design, plot.new, plot.window, plot.xy, points, polygon,
-       rect, rug, screen, segments, "spineplot", split.screen, stars,
-       stem, strheight, stripchart, strwidth, sunflowerplot, symbols,
-       text, title, xinch, xspline, xyinch, yinch)
+       axis.POSIXct, barplot, barplot, box, boxplot, bxp, cdplot,
+       clip, close.screen, co.intervals, contour, coplot, curve,
+       dotchart, erase.screen, filled.contour, fourfoldplot, frame,
+       grid, hist, hist.default, identify, image, layout, layout.show,
+       lcm, legend, lines, lines.default, locator, matlines, matplot,
+       matpoints, mosaicplot, mtext, pairs, panel.smooth, par, persp,
+       pie, plot, plot.design, plot.new, plot.window, plot.xy, points,
+       polygon, rect, rug, screen, segments, spineplot, split.screen,
+       stars, stem, strheight, stripchart, strwidth, sunflowerplot,
+       symbols, text, title, xinch, xspline, xyinch, yinch)
 
 # leave most of the default methods visible as people seem to call them.
 export(barplot.default, boxplot.default, contour.default, image.default,
@@ -26,8 +26,8 @@ S3method(Axis, POSIXlt)
 S3method(barplot, default)
 S3method(boxplot, default)
 S3method(boxplot, formula)
-S3method("cdplot", "default")
-S3method("cdplot", "formula")
+S3method(cdplot, default)
+S3method(cdplot, formula)
 S3method(contour, default)
 S3method(hist, Date)
 S3method(hist, default)
@@ -53,8 +53,8 @@ S3method(plot, POSIXlt)
 S3method(plot, table)
 S3method(points, default)
 S3method(points, formula)
-S3method("spineplot", "default")
-S3method("spineplot", "formula")
+S3method(spineplot, default)
+S3method(spineplot, formula)
 S3method(stripchart, default)
 S3method(stripchart, formula)
 S3method(text, default)
