@@ -59,3 +59,6 @@ par <- function (..., no.readonly = FALSE)
     if(single) value <- value[[1]]
     if(!is.null(names(args))) invisible(value) else value
 }
+
+clip <- function(x1, x2, y1, y2) .Internal(clip(x1, x2, y1, y2))
+
