@@ -542,7 +542,8 @@ par(\dots, no.readonly = FALSE)
     \item{\code{xpd}}{A logical value or \code{NA}.
       If \code{FALSE}, all plotting is clipped to the plot region, if
       \code{TRUE}, all plotting is clipped to the figure region, and if
-      \code{NA}, all plotting is clipped to the device region.}
+      \code{NA}, all plotting is clipped to the device region. See also
+      \code{\link{clip}}.}
     \item{\code{yaxp}}{A vector of the form \code{c(y1, y2, n)} giving
       the coordinates of the extreme tick marks and the number of
       intervals between tick-marks unless for log coordinates, see
@@ -618,7 +619,7 @@ par(\dots, no.readonly = FALSE)
 }
 \seealso{
   \code{\link{plot.default}} for some high-level plotting parameters;
-  \code{\link{colors}};
+  \code{\link{colors}}; \code{\link{clip}};
   \code{\link{options}} for other setup parameters;
   graphic devices \code{\link{x11}}, \code{\link{postscript}} and
   setting up device regions by \code{\link{layout}} and
